# OVGC

./: CMakeLists.txt  README.md  main.cpp  testObjectTypeCpp.cpp
Excample/TypeInt/: ExcampleLogicOperation.cpp
Tests/: CMakeLists.txt
Tests/TestsTemplatesTypes/: AuxiliaryFunction.hpp  CMakeLists.txt  TestsIntObject.cpp
includes/: BaseFunctionsObjects.hpp  Types.hpp
includes/BaseFunctions/: FunctionConvertTypes.hpp
includes/CustomException/ExceptionCheckTypes/: ExceptionTypes.hpp
includes/CustomFunctionsFromStandartLibrary/: CustomFormat.hpp
includes/RestrictionsForTemplates/: RestrictionsForTypes.hpp
includes/TemplatesTypes/: Bool.hpp  Char.hpp  Common.hpp  Float.hpp  Int.hpp  Pointer.hpp  String.hpp
src/: BaseFunctionsObjects.hpp  Types.hpp  main.cpp
src/BaseFunctions/: Print.hpp
src/CustomFunctionsFromStandartLibrary/: CustomFormat.hpp
src/TemplatesTypes/: Bool.hpp  Char.cpp  Char.hpp  Common.hpp  Float.cpp  Float.hpp  Int.hpp  String.hpp
